//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  name String
  email String [unique]
  emailVerified DateTime
  image String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  accounts Account [not null]
  sessions Session [not null]
}

Table Question {
  id Int [pk, increment]
  number Int [not null]
  name String [not null]
  link String [not null]
  difficulty Difficulty [not null]
  acceptence Float [not null]
  companies QuestionCompany [not null]
}

Table Company {
  id Int [pk, increment]
  name String [not null]
  questions QuestionCompany [not null]
}

Table QuestionCompany {
  questionId Int [not null]
  companyId Int [not null]
  months6 Int [not null]
  year1 Int [not null]
  year2 Int [not null]
  alltime Int [not null]
  question Question [not null]
  company Company [not null]

  indexes {
    (questionId, companyId) [pk]
  }
}

Table Account {
  id String [pk]
  userId String [not null]
  providerType String [not null]
  providerId String [not null]
  providerAccountId String [not null]
  refreshToken String
  accessToken String
  accessTokenExpires DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]

  indexes {
    (providerId, providerAccountId) [unique]
  }
}

Table Session {
  id String [pk]
  userId String [not null]
  expires DateTime [not null]
  sessionToken String [unique, not null]
  accessToken String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
}

Table VerificationRequest {
  id String [pk]
  identifier String [not null]
  token String [unique, not null]
  expires DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (identifier, token) [unique]
  }
}

Enum Difficulty {
  EASY
  MEDIUM
  HARD
}

Ref: QuestionCompany.questionId > Question.id

Ref: QuestionCompany.companyId > Company.id

Ref: Account.userId > User.id

Ref: Session.userId > User.id